<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Hardware" Id="{72ad6a3a-e035-4ae1-b9b7-c68bdd948b2f}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	robot1 : RobotA21;
	robot2 : RobotA21;
	
	toolStorageA21Left : A21ToolStorage;
	toolStorageA21Right : A21ToolStorage;
	
	skidA21Left : SkidMagazine;
	skidA21Right : SkidMagazine;
	
	magazineA21Left : SkidMagazine;
	magazineA21Right : SkidMagazine;
	stagingTableLeft : StagingTable;
	stagingTableRight : StagingTable;
	
	strapperA21 : StrapMachine;
	
	horizontalDriveA21Left, horizontalDriveA21Right : AirPiston := (
		limitSensorDefaultState := FALSE,
		useBrake := FALSE);
	
	verticalDriveA21Left, verticalDriveA21Right : ClearLinkMC := (
		limitSensorDefaultState := TRUE, 
		homingDirection := TRUE, //outwards (up)
		minPosition := 0,
		displacementPerRotation := 1,
		unitsPerPulse := 8000); //0.1x gearbox, 10 revs/pulse to compensate
		
	insertionA21Left, insertionA21Right : Insertion;
	
	pistonA21Bottom : SimplePiston;
	
	suctionA21Top : ARRAY[1..3] OF SuctionPad;
	suctionA21Left : ARRAY[1..4] OF SuctionPad;
	suctionA21Right : ARRAY[1..4] OF SuctionPad; 
	suctionA21Bottom : ARRAY[1..2] OF SuctionPad;
	
	stackLightA21 : PMLStackLight;
	alarmsA21 : A21Alarms;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>